--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@sanity/client": "^3.3.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@react-oauth/google": "^0.2.6",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "react-google-login": "^5.2.2",
+    "axios": "^0.27.2",
+    "gapi-script": "^1.2.0",
+    "react-icons": "^4.3.1",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
